Add link footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     
 </head>
 <body>
-
-    <h1>Hello World</h1>
+    <h1></h1>
 
     <div id="container-date">
         <div class="container">
@@ -34,7 +33,7 @@
         
     </div>
 
-    <div class="footer">Chris Totanes 2023 | For demonstration purposes only</div >
+    <div class="footer"><a href="https://christotanes.github.io/web-portfolio/">Chris Totanes</a> 2023 | For demonstration purposes only</div >
 
     <script src="./script.js"></script>
 </body>
