--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <form action="">
             <input type="number" id="alarm-hours" min="0" max="23">
             <input type="number" id="alarm-minutes" min="0" max="59">
-            <div style="text-align: center; margin-top:10px;"><button type="button" id="submit">Submit</button></div>
+            <div style="text-align: center; margin-top:10px;"><button type="button" id="submit" onclick="setAlarm()">Set Alarm</button></div>
         </form>
     </div> 
 
