Modify form and button css

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
     <!-- After submitting will be hidden then show .countdown -->
     <div class="set-alarm container-alarm"> 
-        <form action="">
+        <form action="" class="form">
             <input type="number" id="alarm-hours" min="0" max="23" value="0">
             <input type="number" id="alarm-minutes" min="0" max="59" value="0">
-            <div style="text-align: center; margin-top:10px;"><button type="button" id="submit">Set Alarm</button></div>
+            <div style="text-align: center; margin-top:10px;"><button class="button" type="button" id="submit">Set Alarm</button></div>
         </form>
     </div> 
 
