Add label on input html

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!-- After submitting will be hidden then show .countdown -->
     <div class="set-alarm container-alarm"> 
         <form action="">
-            <input type="number" id="alarm-hours" min="0" max="23">
-            <input type="number" id="alarm-minutes" min="0" max="59">
+            <input type="number" id="alarm-hours" min="0" max="23"><span>h</span>
+            <input type="number" id="alarm-minutes" min="0" max="59"><span>m</span>
             <div style="text-align: center; margin-top:10px;"><button type="button" id="submit" onclick="setAlarm()">Set Alarm</button></div>
         </form>
     </div> 
