Refactor add h m s edit style

--- a/index.html
+++ b/index.html
@@ -21,18 +21,13 @@
     </div>
     <div id="container-clock" >
         <div class="clock-text">
-            <h3 class="container hours"></h3>
-            <h5>Hours</h5>
-        </div>
-        
-        <div class="clock-text">
-            <h3 class="container minutes"></h3>
-            <h5>Minutes</h5>
-        </div>
-       
-        <div class="clock-text">
-            <h3 class="container seconds"></h3>
-            <h5>Seconds</h5>
+            <span class="container hours"></span>
+            <span class="text">H  : </span>
+            <span class="container minutes"></span>
+            <span class="text">M  : </span>
+            <span class="container seconds"></span>
+            <span class="text">S</span>
+            <span class="ampm"></span>
         </div>
     </div>
 
