Refactor alarm to accept 0 hour value

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <div class="footer"><a href="https://christotanes.github.io/web-portfolio/" style="text-decoration: none;">Chris Totanes</a> 2023 | For demonstration purposes only</div >
+    <div class="footer"><a href="https://christotanes.github.io/web-portfolio/">Chris Totanes</a> 2023 | For demonstration purposes only</div >
 
     <script src="./script.js"></script>
 </body>
