--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock and Timer</title>
+    <title>Clock and Alarm</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./images/clock.png" type="image/x-icon">
     <meta name="description" content="Free to use clock with alarm on a countdown for portfolio purposes">
@@ -45,7 +45,12 @@
         <form action="">
             <input type="number" id="alarm-hours" min="0" max="23" value="0"><label>h</label>
             <input type="number" id="alarm-minutes" min="0" max="59" value="0"><label>m</label>
-            <div style="text-align: center; margin-top:10px;"><button type="button" id="submit">Set Alarm</button></div>
+            <div class="button-container">
+                <button type="button" id="submit" class="button">Set Alarm</button>
+            </div>
+            <div class="button-container">
+                <button type="button" id="clear" class="button">Clear</button>
+            </div>
         </form>
     </div> 
 
