Refactor iOS audio code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="number" id="alarm-hours" min="0" max="23" value="0"><label>h</label>
             <input type="number" id="alarm-minutes" min="0" max="59" value="0"><label>m</label>
             <div class="button-container">
-                <button type="button" id="submit" class="button" onclick="playAudio()">Set Alarm</button>
+                <button type="button" id="submit" class="button">Set Alarm</button>
                 <audio id="gameAudio">
                     <source src="./sounds/alarmbuzzer.wav" type="audio/mp3">
                     Your browser does not support the audio element.
