--- a/index.html
+++ b/index.html
@@ -43,19 +43,18 @@
     <!-- After submitting will be hidden then show .countdown -->
     <div class="set-alarm container-alarm"> 
         <form action="">
-            <input type="number" id="alarm-hours" min="0" max="23" value="0"><label>h</label>
-            <input type="number" id="alarm-minutes" min="0" max="59" value="0"><label>m</label>
+            <input type="number" id="alarm-hours" min="0" max="23" value="0" class="label-text"><label>h</label>
+            <input type="number" id="alarm-minutes" min="0" max="59" value="0" class="label-text"><label>m</label>
             <div class="button-container">
-                <button type="button" id="submit" class="button">Set Alarm</button>
-                <audio id="gameAudio">
+                <button type="button" id="submit" class="button">Set Hours and Minutes First</button>
+            </div>
+            <div class="button-container">
+                <button class="button" id="playAudio" type="button">Then Set Alarm</button>
+                <audio id="buzzAudio">
                     <source src="./sounds/alarmbuzzer.wav" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <!-- <div class="button-container">
-                <button class="button" id="playAudio" onclick="playAudio()" type="button">Play Audio</button>
-                
-            </div> -->
             <div class="button-container">
                 <button type="button" id="clear" class="button">Clear</button>
             </div>
