--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="footer"><a href="https://christotanes.github.io/web-portfolio/">Chris Totanes</a> 2023 | For demonstration purposes only</div >
+    <div class="footer"><a href="https://christotanes.github.io/web-portfolio/">Chris Totanes 2023</a> | For demonstration purposes only</div >
 
     <script src="./script.js"></script>
 </body>
