--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             <input type="number" id="alarm-hours" min="0" max="23" value="0" class="label-text"><label>h</label>
             <input type="number" id="alarm-minutes" min="0" max="59" value="0" class="label-text"><label>m</label>
             <div class="button-container">
-                <button type="button" id="submit" class="button">Set Hours and Minutes First</button>
+                <button type="button" id="submit" class="button">Set Alarm</button>
             </div>
-            <div class="button-container">
+            <!-- <div class="button-container">
                 <button class="button" id="playAudio" type="button">Then Set Alarm</button>
                 <audio id="buzzAudio">
                     <source src="./sounds/alarmbuzzer.wav" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
-            </div>
+            </div> -->
             <div class="button-container">
                 <button type="button" id="clear" class="button">Clear</button>
             </div>
